Fixed a couple of layout issues on results cards

--- a/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_results.scss
+++ b/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_results.scss
@@ -71,7 +71,7 @@
   @include govuk-media-query($from: desktop) {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
 
     li {
       flex: 0 1 33%;
@@ -89,7 +89,7 @@
     border: 0;
     height: 100%;
     box-sizing: border-box;
-    padding: 0 govuk-spacing(4);
+    padding: 0 govuk-spacing(3);
     margin-bottom: govuk-spacing(6);
     @include govuk-media-query($from: desktop) {
       margin-bottom: govuk-spacing(3);
